--- a/_31Templates/_33Templates.vcxproj
+++ b/_31Templates/_33Templates.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{37a05ded-3b52-4fd4-af78-db1a63f779fb}</ProjectGuid>
     <RootNamespace>My33Templates</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>_31Templates</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
