--- a/_32StackHeap/_32StackHeap.vcxproj
+++ b/_32StackHeap/_32StackHeap.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b3eebe37-e19a-4848-8e1f-44513578f59d}</ProjectGuid>
-    <RootNamespace>My37StaticArrays</RootNamespace>
+    <ProjectGuid>{39380b3e-2f98-49c1-acb1-e8c959069a7d}</ProjectGuid>
+    <RootNamespace>My32StackHeap</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
