--- a/_36FunctionPointers/_36FunctionPointers.vcxproj
+++ b/_36FunctionPointers/_36FunctionPointers.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{fed30de4-9283-46cf-888d-7b05d22b29dd}</ProjectGuid>
-    <RootNamespace>My34Auto</RootNamespace>
+    <ProjectGuid>{6fbd5090-51f8-4027-81d6-915bffec45b1}</ProjectGuid>
+    <RootNamespace>My36FunctionPointers</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
